// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`End-to-end test for ORD document Tests for default ORD document when .cdsrc.json is not present Successfully create ORD Documents with defaults 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for AdminService",
      "entityTypeMappings": [
        {
          "entityTypeTargets": [
            {
              "ordId": "sap.odm:entityType:BusinessPartner:v1",
            },
          ],
        },
      ],
      "entryPoints": [
        "/odata/v4/admin",
      ],
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:apiResource:AdminService:v1",
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-api:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:AdminService:v1/AdminService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:AdminService:v1/AdminService.edmx",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "apiProtocol": "odata-v4",
      "description": "Description for CinemaService",
      "entryPoints": [
        "/browse",
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:apiResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:sap.test.cdsrc.sample:CinemaService",
      ],
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-api-internal:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:CinemaService:v1/CinemaService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:CinemaService:v1/CinemaService.edmx",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "dataProducts": [
    {
      "category": "business-object",
      "description": "The Supplier data product offers access to all customers.",
      "entityTypes": [
        "sap.odm:entityType:BusinessPartner:v1",
        "sap.sm:entityType:BusinessPartner:v1",
      ],
      "lastUpdate": "2024-06-20T14:04:01+01:00",
      "localId": "Supplier",
      "ordId": "sap.sm:dataProduct:Supplier:v1",
      "outputPorts": [
        {
          "ordId": "sap.sm:apiResource:SupplierService:v1",
        },
      ],
      "partOfPackage": "sap.sm:package:smDataProducts:v1",
      "releaseStatus": "active",
      "responsible": "sap:ach:CIC-DP-CO",
      "shortDescription": "Ariba Supplier data product",
      "title": "Supplier",
      "type": "primary",
      "version": "1.1.11",
      "visibility": "public",
    },
  ],
  "description": "this is my custom description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "entityTypeMappings": {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:test-from-extension:v1",
          },
        ],
      },
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:eventResource:AdminService:v1",
      "partOfGroups": [
        "sap.cds:service:sap.test.cdsrc.sample:AdminService",
      ],
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-event:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/sap.test.cdsrc.sample:eventResource:AdminService:v1/AdminService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:eventResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:sap.test.cdsrc.sample:CinemaService",
      ],
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-event-internal:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/sap.test.cdsrc.sample:eventResource:CinemaService:v1/CinemaService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:sap.test.cdsrc.sample:AdminService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test AdminService title",
    },
    {
      "groupId": "sap.cds:service:sap.test.cdsrc.sample:CinemaService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test Cinema Service title",
    },
  ],
  "openResourceDiscovery": "1.10",
  "packages": [
    {
      "description": "This package contains public APIs for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-api:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing public APIs",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
    {
      "description": "This package contains internal APIs for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-api-internal:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing internal APIs",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
    {
      "description": "This package contains public Events for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-event:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.1",
    },
    {
      "description": "This package contains internal Events for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-event-internal:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing internal Events",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "sap:core:v1",
  ],
  "products": [
    {
      "ordId": "customer:product:capire.bookshop.ord.sample:",
      "shortDescription": "Short description of capire bookshop ord sample",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
    },
  ],
}
`;

exports[`End-to-end test for ORD document Tests for default ORD document when .cdsrc.json is present Successfully create ORD Documents with defaults 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for AdminService",
      "entityTypeMappings": [
        {
          "entityTypeTargets": [
            {
              "ordId": "sap.odm:entityType:BusinessPartner:v1",
            },
          ],
        },
      ],
      "entryPoints": [
        "/odata/v4/admin",
      ],
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:apiResource:AdminService:v1",
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-api:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:AdminService:v1/AdminService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:AdminService:v1/AdminService.edmx",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "apiProtocol": "odata-v4",
      "description": "Description for CinemaService",
      "entryPoints": [
        "/browse",
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:apiResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:sap.test.cdsrc.sample:CinemaService",
      ],
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-api-internal:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:CinemaService:v1/CinemaService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:CinemaService:v1/CinemaService.edmx",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "dataProducts": [
    {
      "category": "business-object",
      "description": "The Supplier data product offers access to all customers.",
      "entityTypes": [
        "sap.odm:entityType:BusinessPartner:v1",
        "sap.sm:entityType:BusinessPartner:v1",
      ],
      "lastUpdate": "2024-06-20T14:04:01+01:00",
      "localId": "Supplier",
      "ordId": "sap.sm:dataProduct:Supplier:v1",
      "outputPorts": [
        {
          "ordId": "sap.sm:apiResource:SupplierService:v1",
        },
      ],
      "partOfPackage": "sap.sm:package:smDataProducts:v1",
      "releaseStatus": "active",
      "responsible": "sap:ach:CIC-DP-CO",
      "shortDescription": "Ariba Supplier data product",
      "title": "Supplier",
      "type": "primary",
      "version": "1.1.11",
      "visibility": "public",
    },
  ],
  "description": "this is my custom description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "entityTypeMappings": {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:test-from-extension:v1",
          },
        ],
      },
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:eventResource:AdminService:v1",
      "partOfGroups": [
        "sap.cds:service:sap.test.cdsrc.sample:AdminService",
      ],
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-event:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/sap.test.cdsrc.sample:eventResource:AdminService:v1/AdminService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:eventResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:sap.test.cdsrc.sample:CinemaService",
      ],
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-event-internal:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/sap.test.cdsrc.sample:eventResource:CinemaService:v1/CinemaService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:sap.test.cdsrc.sample:AdminService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test AdminService title",
    },
    {
      "groupId": "sap.cds:service:sap.test.cdsrc.sample:CinemaService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test Cinema Service title",
    },
  ],
  "openResourceDiscovery": "1.10",
  "packages": [
    {
      "description": "This package contains public APIs for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-api:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing public APIs",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
    {
      "description": "This package contains internal APIs for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-api-internal:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing internal APIs",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
    {
      "description": "This package contains public Events for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-event:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.1",
    },
    {
      "description": "This package contains internal Events for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-event-internal:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing internal Events",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "sap:core:v1",
  ],
  "products": [
    {
      "ordId": "customer:product:capire.bookshop.ord.sample:",
      "shortDescription": "Short description of capire bookshop ord sample",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
    },
  ],
}
`;

exports[`End-to-end test for ORD document Tests for default ORD document when .cdsrc.json is present Successfully create ORD Documents with defaults and applicationNamespace configured incorrectly 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for AdminService",
      "entityTypeMappings": [
        {
          "entityTypeTargets": [
            {
              "ordId": "sap.odm:entityType:BusinessPartner:v1",
            },
          ],
        },
      ],
      "entryPoints": [
        "/odata/v4/admin",
      ],
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:apiResource:AdminService:v1",
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-api:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:AdminService:v1/AdminService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:AdminService:v1/AdminService.edmx",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "apiProtocol": "odata-v4",
      "description": "Description for CinemaService",
      "entryPoints": [
        "/browse",
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:apiResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:sap.test.cdsrc.sample:CinemaService",
      ],
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-api-internal:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:CinemaService:v1/CinemaService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/sap.test.cdsrc.sample:apiResource:CinemaService:v1/CinemaService.edmx",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "dataProducts": [
    {
      "category": "business-object",
      "description": "The Supplier data product offers access to all customers.",
      "entityTypes": [
        "sap.odm:entityType:BusinessPartner:v1",
        "sap.sm:entityType:BusinessPartner:v1",
      ],
      "lastUpdate": "2024-06-20T14:04:01+01:00",
      "localId": "Supplier",
      "ordId": "sap.sm:dataProduct:Supplier:v1",
      "outputPorts": [
        {
          "ordId": "sap.sm:apiResource:SupplierService:v1",
        },
      ],
      "partOfPackage": "sap.sm:package:smDataProducts:v1",
      "releaseStatus": "active",
      "responsible": "sap:ach:CIC-DP-CO",
      "shortDescription": "Ariba Supplier data product",
      "title": "Supplier",
      "type": "primary",
      "version": "1.1.11",
      "visibility": "public",
    },
  ],
  "description": "this is my custom description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "entityTypeMappings": {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:test-from-extension:v1",
          },
        ],
      },
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:eventResource:AdminService:v1",
      "partOfGroups": [
        "sap.cds:service:sap.test.cdsrc.sample:AdminService",
      ],
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-event:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/sap.test.cdsrc.sample:eventResource:AdminService:v1/AdminService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "sap.test.cdsrc.sample:eventResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:sap.test.cdsrc.sample:CinemaService",
      ],
      "partOfPackage": "sap.test.cdsrc.sample:package:capirebookshopordsample-event-internal:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/sap.test.cdsrc.sample:eventResource:CinemaService:v1/CinemaService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:sap.test.cdsrc.sample:AdminService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test AdminService title",
    },
    {
      "groupId": "sap.cds:service:sap.test.cdsrc.sample:CinemaService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test Cinema Service title",
    },
  ],
  "openResourceDiscovery": "1.10",
  "packages": [
    {
      "description": "This package contains public APIs for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-api:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing public APIs",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
    {
      "description": "This package contains internal APIs for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-api-internal:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing internal APIs",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
    {
      "description": "This package contains public Events for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-event:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.1",
    },
    {
      "description": "This package contains internal Events for capire bookshop ord sample.",
      "ordId": "sap.test.cdsrc.sample:package:capirebookshopordsample-event-internal:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing internal Events",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "sap:core:v1",
  ],
  "products": [
    {
      "ordId": "customer:product:capire.bookshop.ord.sample:",
      "shortDescription": "Short description of capire bookshop ord sample",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
    },
  ],
}
`;

exports[`Tests for eventResource and apiResource should block MTXServices when multitenancy is enbaled 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for cds.xt.MyService",
      "entryPoints": [
        "/odata/v4/my",
      ],
      "extensible": {
        "supported": "no",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:cds.xt.MyService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:cds.xt.MyService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:cds.xt.MyService:v1/cds.xt.MyService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:cds.xt.MyService:v1/cds.xt.MyService.edmx",
        },
      ],
      "shortDescription": "Short description of cds.xt.MyService",
      "title": "cds.xt.MyService",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "description": "this is an application description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "no",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:cds.xt.MyService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:cds.xt.MyService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:cds.xt.MyService:v1/cds.xt.MyService.asyncapi2.json",
        },
      ],
      "shortDescription": "cds.xt.MyService event resource",
      "title": "ODM capirebookshopordsample Events",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:cds.xt.MyService",
      "groupTypeId": "sap.cds:service",
      "title": "My Service",
    },
  ],
  "openResourceDiscovery": "1.9",
  "packages": [
    {
      "description": "This package contains public General for capire bookshop ord sample.",
      "ordId": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing public General",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "none",
  ],
  "products": [
    {
      "ordId": "customer:product:capire.bookshop.ord.sample:",
      "shortDescription": "Short description of capire bookshop ord sample",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
    },
  ],
}
`;

exports[`Tests for eventResource and apiResource should block OpenResourceDiscoveryService 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for MyService",
      "entryPoints": [
        "/odata/v4/my",
      ],
      "extensible": {
        "supported": "no",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:MyService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:MyService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:MyService:v1/MyService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:MyService:v1/MyService.edmx",
        },
      ],
      "shortDescription": "Short description of MyService",
      "title": "MyService",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "description": "this is an application description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "no",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:MyService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:MyService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:MyService:v1/MyService.asyncapi2.json",
        },
      ],
      "shortDescription": "MyService event resource",
      "title": "ODM capirebookshopordsample Events",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:MyService",
      "groupTypeId": "sap.cds:service",
      "title": "My Service",
    },
  ],
  "openResourceDiscovery": "1.9",
  "packages": [
    {
      "description": "This package contains public General for capire bookshop ord sample.",
      "ordId": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing public General",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "none",
  ],
  "products": [
    {
      "ordId": "customer:product:capire.bookshop.ord.sample:",
      "shortDescription": "Short description of capire bookshop ord sample",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
    },
  ],
}
`;

exports[`Tests for eventResource and apiResource should exclude external service 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for MyService",
      "entryPoints": [
        "/odata/v4/my",
      ],
      "extensible": {
        "supported": "no",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:MyService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:MyService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:MyService:v1/MyService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:MyService:v1/MyService.edmx",
        },
      ],
      "shortDescription": "Short description of MyService",
      "title": "MyService",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "description": "this is an application description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "no",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:MyService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:MyService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:MyService:v1/MyService.asyncapi2.json",
        },
      ],
      "shortDescription": "MyService event resource",
      "title": "ODM capirebookshopordsample Events",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:MyService",
      "groupTypeId": "sap.cds:service",
      "title": "My Service",
    },
  ],
  "openResourceDiscovery": "1.9",
  "packages": [
    {
      "description": "This package contains public General for capire bookshop ord sample.",
      "ordId": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing public General",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "none",
  ],
  "products": [
    {
      "ordId": "customer:product:capire.bookshop.ord.sample:",
      "shortDescription": "Short description of capire bookshop ord sample",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
    },
  ],
}
`;

exports[`Tests for eventResource and apiResource should exclude service when it has procotol none 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for MyService",
      "entryPoints": [
        "/odata/v4/my",
      ],
      "extensible": {
        "supported": "no",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:MyService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:MyService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:MyService:v1/MyService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:MyService:v1/MyService.edmx",
        },
      ],
      "shortDescription": "Short description of MyService",
      "title": "MyService",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "description": "this is an application description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "no",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:MyService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:MyService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:MyService:v1/MyService.asyncapi2.json",
        },
      ],
      "shortDescription": "MyService event resource",
      "title": "ODM capirebookshopordsample Events",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:MyService",
      "groupTypeId": "sap.cds:service",
      "title": "My Service",
    },
  ],
  "openResourceDiscovery": "1.9",
  "packages": [
    {
      "description": "This package contains public General for capire bookshop ord sample.",
      "ordId": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing public General",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "none",
  ],
  "products": [
    {
      "ordId": "customer:product:capire.bookshop.ord.sample:",
      "shortDescription": "Short description of capire bookshop ord sample",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
    },
  ],
}
`;

exports[`Tests for eventResource and apiResource should generate mcp apiResource mcp plugin is available 1`] = `
{
  "apiProtocol": "mcp",
  "description": "This is the MCP server to interact with the cap-js-ord",
  "entryPoints": [],
  "extensible": {
    "supported": "no",
  },
  "lastUpdate": "2024-11-04T14:33:25+01:00",
  "ordId": "customer.capjsord:apiResource:mcp-server:v1",
  "partOfPackage": "customer.capjsord:package:capjsord:v1",
  "releaseStatus": "active",
  "resourceDefinitions": [
    {
      "accessStrategies": undefined,
      "mediaType": "application/json",
      "type": "custom",
      "url": "/ord/v1/customer.capjsord:apiResource:mcp-server:v1/mcp-server-definition.mcp.json",
    },
  ],
  "shortDescription": "This is the MCP server to interact with the cap-js-ord",
  "title": "MCP Server for cap-js-ord",
  "version": "1.0.0",
  "visibility": "public",
}
`;

exports[`Tests for products and packages should not contain products property if existingProductId provided 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for AdminService",
      "entityTypeMappings": {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:test-from-extension:v1",
          },
        ],
      },
      "entryPoints": [
        "/odata/v4/admin",
      ],
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:AdminService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:AdminService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:AdminService:v1/AdminService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:AdminService:v1/AdminService.edmx",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "apiProtocol": "odata-v4",
      "description": "Description for CinemaService",
      "entryPoints": [
        "/browse",
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:CinemaService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:CinemaService:v1/CinemaService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:CinemaService:v1/CinemaService.edmx",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "description": "this is an application description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "entityTypeMappings": {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:test-from-extension:v1",
          },
        ],
      },
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:AdminService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:AdminService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:AdminService:v1/AdminService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:CinemaService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:CinemaService:v1/CinemaService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:AdminService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test AdminService title",
    },
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:CinemaService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test Cinema Service title",
    },
  ],
  "openResourceDiscovery": "1.9",
  "packages": [
    {
      "description": "This package contains public General for capire bookshop ord sample.",
      "ordId": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "partOfProducts": [
        "sap:product:SAPServiceCloudV2:",
      ],
      "shortDescription": "Package containing public General",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "none",
  ],
}
`;

exports[`Tests for products and packages should raise error log when custom product ordId starts with sap detected 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for AdminService",
      "entityTypeMappings": {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:test-from-extension:v1",
          },
        ],
      },
      "entryPoints": [
        "/odata/v4/admin",
      ],
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:AdminService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:AdminService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:AdminService:v1/AdminService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:AdminService:v1/AdminService.edmx",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "apiProtocol": "odata-v4",
      "description": "Description for CinemaService",
      "entryPoints": [
        "/browse",
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:CinemaService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:CinemaService:v1/CinemaService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:CinemaService:v1/CinemaService.edmx",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "description": "this is an application description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "entityTypeMappings": {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:test-from-extension:v1",
          },
        ],
      },
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:AdminService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:AdminService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:AdminService:v1/AdminService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:CinemaService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:CinemaService:v1/CinemaService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:AdminService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test AdminService title",
    },
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:CinemaService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test Cinema Service title",
    },
  ],
  "openResourceDiscovery": "1.9",
  "packages": [
    {
      "description": "This package contains public General for capire bookshop ord sample.",
      "ordId": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "partOfProducts": [
        "customer:product:capire.bookshop.ord.sample:",
      ],
      "shortDescription": "Package containing public General",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "none",
  ],
  "products": [
    {
      "ordId": "customer:product:capire.bookshop.ord.sample:",
      "shortDescription": "Short description of capire bookshop ord sample",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
    },
  ],
}
`;

exports[`Tests for products and packages should use valid custom products ordId 1`] = `
{
  "$schema": "https://open-resource-discovery.github.io/specification/spec-v1/interfaces/Document.schema.json",
  "apiResources": [
    {
      "apiProtocol": "odata-v4",
      "description": "Description for AdminService",
      "entityTypeMappings": {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:test-from-extension:v1",
          },
        ],
      },
      "entryPoints": [
        "/odata/v4/admin",
      ],
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:AdminService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:AdminService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:AdminService:v1/AdminService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:AdminService:v1/AdminService.edmx",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "apiProtocol": "odata-v4",
      "description": "Description for CinemaService",
      "entryPoints": [
        "/browse",
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:apiResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:CinemaService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "openapi-v3",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:CinemaService:v1/CinemaService.oas3.json",
        },
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/xml",
          "type": "edmx",
          "url": "/ord/v1/customer.capirebookshopordsample:apiResource:CinemaService:v1/CinemaService.edmx",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "consumptionBundles": [
    {
      "description": "This Consumption Bundle contains all resources of the reference app which are unprotected and do not require authentication",
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "capirebookshopordsample:consumptionBundle:noAuth:v1",
      "shortDescription": "If we have another protected API then it will be another object",
      "title": "Unprotected resources",
      "version": "1.0.0",
    },
  ],
  "description": "this is an application description",
  "eventResources": [
    {
      "description": "CAP Event resource describing events / messages.",
      "entityTypeMappings": {
        "entityTypeTargets": [
          {
            "ordId": "sap.odm:entityType:test-from-extension:v1",
          },
        ],
      },
      "exposedEntityTypes": [
        {
          "ordId": "sap.odm:entityType:odm.bookshop.Authors:v1",
        },
      ],
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:AdminService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:AdminService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:AdminService:v1/AdminService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test AdminService",
      "title": "This is test AdminService title",
      "version": "2.0.0",
      "visibility": "public",
    },
    {
      "description": "CAP Event resource describing events / messages.",
      "extensible": {
        "supported": "yes",
      },
      "lastUpdate": "2024-11-04T14:33:25+01:00",
      "ordId": "customer.capirebookshopordsample:eventResource:CinemaService:v1",
      "partOfGroups": [
        "sap.cds:service:customer.capirebookshopordsample:CinemaService",
      ],
      "partOfPackage": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "releaseStatus": "active",
      "resourceDefinitions": [
        {
          "accessStrategies": [
            {
              "type": "open",
            },
          ],
          "mediaType": "application/json",
          "type": "asyncapi-v2",
          "url": "/ord/v1/customer.capirebookshopordsample:eventResource:CinemaService:v1/CinemaService.asyncapi2.json",
        },
      ],
      "shortDescription": "short description for test CinemaService",
      "title": "This is test Cinema Service title",
      "version": "1.0.0",
      "visibility": "internal",
    },
  ],
  "groups": [
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:AdminService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test AdminService title",
    },
    {
      "groupId": "sap.cds:service:customer.capirebookshopordsample:CinemaService",
      "groupTypeId": "sap.cds:service",
      "title": "This is test Cinema Service title",
    },
  ],
  "openResourceDiscovery": "1.9",
  "packages": [
    {
      "description": "This package contains public General for capire bookshop ord sample.",
      "ordId": "customer.capirebookshopordsample:package:capirebookshopordsample:v1",
      "partOfProducts": [
        "customer:product:eb.bm.tests:",
      ],
      "shortDescription": "Package containing public General",
      "title": "capire bookshop ord sample",
      "vendor": "customer:vendor:Customer:",
      "version": "1.0.0",
    },
  ],
  "policyLevels": [
    "none",
  ],
  "products": [
    {
      "ordId": "customer:product:eb.bm.tests:",
      "shortDescription": "Short description of capire bookshop ord sample",
      "title": "capire bookshop ord sample",
      "vendor": "sap:vendor:SAP:",
    },
  ],
}
`;
